--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import './styles/layout.css';
+@import './styles/transitions.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -67,11 +69,19 @@
 
 @layer utilities {
   * {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 
   ::-webkit-scrollbar {
-    display: none;  /* Chrome, Safari and Opera */
+    display: none;
+  }
+
+  .line-clamp-2 {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
   }
 }
