--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -15,7 +15,7 @@
   flex: 1;
   overflow-y: auto;
   position: relative;
-  padding-bottom: 5rem; /* Space for navbar */
+  padding-bottom: 5rem;
 }
 
 .navbar {
